--- a/[OCR]webtoon.ipynb
+++ b/[OCR]webtoon.ipynb
@@ -608,21 +608,23 @@
    "source": [
     "from PIL import Image, ImageDraw, ImageFont\n",
     "import textwrap # 줄바꿈\n",
-    "result_img2 = img.copy()\n",
-    "result_img2 = ImageDraw.Draw(result_img2)\n",
+    "\n",
+    "result_img2 = result_img.copy()\n",
+    "draw = ImageDraw.Draw(result_img2)\n",
     "\n",
     "for r in final_result:\n",
     "    x1,y1,w,h,text_ko,text_en = r\n",
+    "\n",
     "    text_position = (x1,y1)\n",
     "\n",
-    "    font = ImageFont.truetype('NanumSquareNeo-Variable.ttf', 12)\n",
-    "    wrapped_text = textwrap.wrap(text_en, width=w/8)\n",
+    "    font = ImageFont.truetype('NanumSquareNeo-Variable.ttf',12)\n",
+    "    wrapped_text = textwrap.wrap(text_en,width=w/8)\n",
     "\n",
-    "    line_height = font.getsize('hg')[1] * 1.2\n",
-    "    \n",
+    "    line_height = font.getsize('hg')[1] *1.2\n",
+    "\n",
     "    for line in wrapped_text:\n",
-    "        draw.text(text_position, line, fill='black', stroke_width=1, stroke_fill='black')\n",
-    "        text_position = (text_position[0], text_position[1]+line_height)\n",
+    "        draw.text(text_position, line, fill='black',stroke_width=1,stroke_fill=\"black\")\n",
+    "        text_position = (text_position[0],text_position[1]+line_height)\n",
     "\n",
     "result_img2"
    ]
